# clashgent

./: .gitignore  README.md  pyproject.toml  train.py
configs/: example.json
learnings/: approach-decision.md
scripts/: bluestacks-click.sh  bluestacks-screenshot.sh  capture-clash-traffic.sh  start-emulator.sh  view-app-network-logs.sh  view-crash-logs.sh  view-network-logs.sh
src/clashgent/: __init__.py  config.py
src/clashgent/bridges/: __init__.py  action.py  adb.py  base.py  screenshot.py
src/clashgent/game/: __init__.py  actions.py  state.py
src/clashgent/rl/: __init__.py  buffer.py  environment.py  policy.py  trainer.py
src/clashgent/verifiers/: __init__.py  base.py  registry.py
src/clashgent/vision/: __init__.py  classifier.py  detector.py  extractor.py
